# Nexus-Framework

./: .gitignore  ARCHITECTURE_AND_GUIDES.md  AUTO_UI_FALLBACK.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MIGRATION_SUMMARY.md  MODEL_SELECTION_README.md  PLUGIN_DEVELOPMENT.md  README.md  README_NEW.md  alias_manager.py  cli_interface.py  config.bak  config.json  config.yaml  config_schema.yml  docker-compose.yml  entry_points.cfg  example_osint_plugin.py  https___github.com_Xiah-666_Nexus-Framework how ca.md  install.sh  install_windows.ps1  launch.py  launch_nemesis.sh  llm_agent_interface.py  logging_config.py  main.py  model_switcher.py  nemesis-nexus.desktop  nemesis_nexus.py  nemesis_web_api.py  nemesis_web_ui.py  plugin_interface.py  pray.py  pray_gui_fixed.py  pro_plugins.py  pyproject.toml  quickstart.sh  (+7 more)
.github/workflows/: ci.yml
agents/: __init__.py  orchestrator.py
core/: __init__.py  banner.py  config.py  logging_config.py
interfaces/: __init__.py  api_interface.py  base_interface.py  cli_interface.py  web_interface.py
legacy/: pray.py
tests/: test_config.py  test_logging.py
tests/api/: test_nemesis_web_api.py  test_vault_and_visualization.py
tests/plugins/: test_pro_plugins.py
tests/ui/: test_nemesis_web_ui.py
utils/: __init__.py  system_detection.py
