[project]
name = "pray"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "colorama>=0.4.6",
    "crewai>=0.140.0",
    "cryptography>=45.0.5",
    "dnspython>=2.7.0",
    "fastapi>=0.115.14",
    "keyring>=25.6.0",
    "langchain>=0.3.26",
    "langgraph>=0.5.1",
    "markdown>=3.8.2",
    "matplotlib>=3.10.3",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "paramiko>=3.5.1",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pyfiglet>=1.0.3",
    "pykwalify>=1.8.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "python-nmap>=0.7.1",
    "python-whois>=0.9.5",
    "pyyaml>=6.0.2",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "scapy>=2.6.1",
    "seaborn>=0.13.2",
    "selenium>=4.34.0",
    "setuptools>=80.9.0",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
    "weasyprint>=65.1",
]
